# Proyectos-Propios

./: README.md
23-24/docs/proyecto 1/.obsidian/: workspace.json
23-24/docs/proyecto 1/Servidor Web/: Configuración del fichero apache.md  Creación de un Servidor Web con Apache.md  Encontrar la carpeta que puse en mi VM.md  Script para crear tu web con Obsidian.md
23-24/docs/proyecto 1/Servidor Web/.obsidian/: workspace.json
23-24/docs/proyecto 1/Servidor Web/.obsidian/plugins/webpage-html-export/: data.json
23-24/docs/proyecto 2/Mi Portafolio Web/: Crear un Portafolio Web.md  Scripts para ejecutar en la VM.md
23-24/docs/proyecto 2/Mi Portafolio Web/.obsidian/: workspace.json
23-24/docs/proyecto 2/Mi Portafolio Web/.obsidian/plugins/webpage-html-export/: data.json
23-24/projects/proyecto 1/: apache_conf.sh
23-24/projects/proyecto 2/: apache_conf.sh  certbot_conf.sh  clases-de-septiembre.pem  no_ip_conf.sh  vm_conf.sh
23-24/projects/proyecto 2/html5up-phantom/: index.html
23-24/projects/proyecto 2/html5up-phantom/assets/css/: main.css
23-24/projects/proyecto 2/html5up-phantom/calculo/cálculo/: clase-1-cálculo.html  clase-4-cálculo.html  planning-cálculo.html  teoremas-de-cálculo.html
23-24/projects/proyecto 2/html5up-phantom/calculo/lib/: metadata.json  rss.xml  search-index.json
23-24/projects/proyecto 2/html5up-phantom/calculo/lib/html/: file-tree.html
23-24/projects/proyecto 2/html5up-phantom/fisica/física/: planning-física.html
23-24/projects/proyecto 2/html5up-phantom/fisica/lib/: metadata.json  rss.xml  search-index.json
23-24/projects/proyecto 2/html5up-phantom/fisica/lib/html/: file-tree.html
23-24/projects/proyecto 2/html5up-phantom/matematica-discreta/lib/: metadata.json  rss.xml  search-index.json
23-24/projects/proyecto 2/html5up-phantom/matematica-discreta/lib/html/: file-tree.html
23-24/projects/proyecto 2/html5up-phantom/matematica-discreta/matemática-discreta/: clase-1-md.html  clase-5-md-(teoría-de-grafos).html
23-24/projects/proyecto 2/matemática-discreta/exámenes/: examen-md-gg1-julio-2024.html
23-24/projects/proyecto 2/md_pagina_web/lib/: metadata.json  rss.xml  search-index.json
23-24/projects/proyecto 2/md_pagina_web/lib/html/: file-tree.html
23-24/projects/proyecto 2/md_pagina_web/lib/scripts/: graph-data.js
23-24/projects/proyecto 2/md_pagina_web/lib/styles/: global-variable-styles.css
23-24/projects/proyecto 2/md_pagina_web/matemática-discreta/: clase-1-md.html
23-24/projects/proyecto 2/md_pagina_web/matemática-discreta/md_pagina_web/lib/html/: file-tree.html
23-24/projects/proyecto 2/md_pagina_web/matemática-discreta/md_pagina_web/matemática-discreta/: planning-matemática-discreta.html
23-24/projects/proyecto 2/p-web/: crear-un-portafolio-web.html  scripts-para-ejecutar-en-la-vm.html
23-24/projects/proyecto 2/p-web/lib/: metadata.json  rss.xml  search-index.json
23-24/projects/proyecto 2/p-web/lib/html/: file-tree.html
23-24/projects/proyecto 2/p-web/lib/scripts/: graph-data.js
23-24/projects/proyecto 3/: B-TreeEntry.hpp  B-TreeEntry_imp.hpp  B-TreeNode.hpp  B-TreeNode_imp.hpp  CMakeLists.txt  lb.cpp  lb2.cpp  root.cpp  test.cpp
23-24/projects/proyecto 4/: CMakeLists.txt
23-24/projects/proyecto 4/DisjointSet/: disjoint_set.hpp
23-24/projects/proyecto 4/Edge/: edge.hpp  edge_imp.hpp  edge_test.cpp
23-24/projects/proyecto 4/Graph/: GRAPH_TEST.cpp  a_star_test.cpp  bfs_test.cpp  dfs_test.cpp  dijkstra_test.cpp  floyd_test.cpp  graph.hpp  graph_imp.hpp  graph_test.cpp  kruskal_test.cpp  prim_test.cpp
23-24/projects/proyecto 4/GraphCell/: graph_cell.hpp  graph_cell_imp.hpp  graph_cell_test.cpp
23-24/projects/proyecto 4/Vertex/: vertex.hpp  vertex_imp.hpp  vertex_test.cpp
23-24/projects/proyecto 5/os_planificator/: CMakeLists.txt  FCFS.cpp  planificator.hpp
